Fix some schema errors
